fix potential memory leaks and synchronized skin loops